--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "gatsby-plugin-manifest": "^2.2.16",
     "gatsby-plugin-offline": "^3.0.6",
     "gatsby-plugin-react-helmet": "^3.1.7",
-    "gatsby-plugin-sharp": "^2.2.21",
+    "gatsby-plugin-sharp": "3.12.0",
     "gatsby-plugin-styled-components": "^3.1.5",
     "gatsby-plugin-svg-sprite": "^2.0.1",
     "gatsby-source-filesystem": "^2.1.22",
